1：优化桥接规则，脚本输入表单 2：优化产品驱动，脚本输入表单全屏展现； 3：添加 websocket 通信组件。

--- a/cn-universal-admin/pom.xml
+++ b/cn-universal-admin/pom.xml
@@ -122,6 +122,12 @@
         </dependency>
         <dependency>
             <groupId>cn.universal.iot</groupId>
+            <artifactId>cn-universal-websocket-protocol</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.universal.iot</groupId>
             <artifactId>cn-universal-notice</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
